# quantum-analysis

./: .Rprofile  .gitignore  Pipfile  README.md  debug-graph.R  different-circuits.R  global.R  matilda-n-layers.R  matilda-prep-instanced-based-opt-qaoa.R  optimal-parameters.R  pyproject.toml  requirements.txt  server.R  ui.R
analysis/: analysis-init.R  analysis-of-convergence.R  analysis-plots.R  combine-exps.R  create-comparable-dataset.R  find-coefficients.R  hamiltonian-coeffs.R  initial-analysis.Rmd  initial-analysis.html  instance-analysis.Rmd  instance-analysis.html  instance-characteristics.R  instance-set-generation.R  matilda-prep-classical-opts.R  matilda-prep-instanced-based-opt-qaoa.R  matilda-prep-n-layers.R  matilda-prep-qaoa-vrp.R  matilda-prep-vqe-maxcut.R  matilda-prep.R
analysis/enrichments/: clause-graph.R  graph-statistics.R  variable-clause-graph.R  variable-graph.R
analysis/extraction-scripts/: build-feature-set.R  get_instances.R  get_mlflow_data.py  matilda-prep-qaoa-vrp-projection.R
analysis/qaoa-classical-optimisers/: plot-classical-optimisers.R
analysis/qaoa-params/: analysis-of-qaoa-params.R  landscape-plots-isa.R  qaoa-param-extraction.R
analysis/qaoa-vrp/: analysis-plots.R
config/: mlflow-tracking-server.yml
isa-analysis/: custom-feature-selection.R  types-of-bad.R
pyscripts/: flatten_json.py  isa-instance-based-parameter-download.py
utils/: create-performance-metrics.R  define-pauli-matrices.R  exp-utils.R  matilda-utils.R  mlflow-clean.R  mlflow-instance-data.R  mlflow-utils.R  plotting-utils.R
